--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'org.jetbrains.kotlin.kapt'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -19,6 +19,13 @@ android {
             useSupportLibrary true
         }
     }
+
+    kapt {
+        arguments {
+            arg("room.schemaLocation", "$projectDir/schemas")
+        }
+    }
+
 
     buildTypes {
         release {
@@ -47,13 +54,14 @@ android {
 }
 
 dependencies {
-    var roomV = "2.4.2"
-    implementation ("androidx.room:room-runtime:$roomV")
-    annotationProcessor("androidx.room:room-compiler:$roomV")
 
-    kapt("androidx.room:room-compiler:$roomV")
-    implementation("androidx.room:room-ktx:$roomV")
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.room:room-runtime:2.4.2'
+    kapt 'androidx.room:room-compiler:2.4.2'
+    implementation 'androidx.room:room-ktx:2.4.2' // Kotlin Extensions and Coroutines support for Room
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1' // LifecycleScope
+
+
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
