--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,8 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.4.2' // Kotlin Extensions and Coroutines support for Room
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1' // LifecycleScope
 
-
+    def lifecycle_version = "2.4.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
