--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
 
     implementation 'androidx.room:room-runtime:2.4.2'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.4.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     kapt 'androidx.room:room-compiler:2.4.2'
     implementation 'androidx.room:room-ktx:2.4.2' // Kotlin Extensions and Coroutines support for Room
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1' // LifecycleScope
@@ -74,6 +75,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    //Fundamental components of compose UI needed to interact with the device, including layout, drawing, and input.
+    implementation "androidx.compose.ui:ui:$compose_version"
 
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.4.0-rc01"
